--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,14 +10,17 @@ environment:
 
 dependencies:
   cupertino_icons: ^1.0.2
+  dartz: ^0.10.1
   equatable: ^2.0.5
   flutter:
     sdk: flutter
 
 dev_dependencies:
+  build_runner: ^2.3.2
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  mockito: ^5.3.2
 
 flutter:
 
